# r1_EA_compliance

./: .gitignore  AGENTS.md  DOWNLOADER_RULES.md  README.md  pyproject.toml  usfs_region1_ea_document_checklist_current_2026.xlsx  usfs_region1_ea_document_checklist_land_exchange_review_2026.xlsx  usfs_region1_ea_source_register_FINAL_INGEST_READY_2026.xlsx
config/: applicability_eval_seed.json  applicability_gold_eval_v0.json  applicability_gold_eval_v1.json  authority_document_ontology_v1.json  authority_family_rule_template_coverage_nepa_ea_v1.json  authority_family_rule_templates_nepa_ea_v1.json  authority_ontology_eval_v1.json  authority_relationship_eval_v1.json  authority_relationship_register_v1.json  authority_relationship_types_v1.json  authority_source_addition_decisions_nepa_ea_v1.json  authority_universe_families_nepa_ea_v1.json  citation_alias_register_v1.json  claim_eval_seed.json  compliance_gold_eval_v0.json  compliance_gold_eval_v1.json  compliance_review_eval_seed.json  compliance_rule_pack_coverage_nepa_ea_v0.json  compliance_rule_pack_nepa_ea_v0.json  direct_file_readiness_contract_v1.json  downloader.toml  downstream_direct_eval_v1.json  draft_generation_eval_v1.json  draft_generation_v1.json  ea_consistency_decision_support_v1.json  ea_review_checklist_seed.json  east_crazies_final_qa_certification_v1.json  forest_plan_component_eval_coverage_v1.json  forest_plan_component_eval_seed.json  forest_plan_component_inventory_seed.json  forest_plan_component_retrieval_eval_v1.json  forest_plan_profiles.json  gold_coverage_v1.json  (+36 more)
docs/: ARCHITECTURE.md  (+68 more)
(+242 files in other folders)
